--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>L System Visualizer</title>
+    <script src="lib/p5.dom.js"></script>
+    <script src="lib/p5.gui.js"></script>
     <script src="lib/p5.js"></script>
     <script src="js/sketch.js"></script>
   </head>
