Workong on initial setup

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>L System Visualizer</title>
-    <script src="lib/p5.dom.js"></script>
-    <script src="lib/p5.gui.js"></script>
     <script src="lib/p5.js"></script>
+    <script src="lib/p5.dom.js"></script>
+    <script src="https://cdn.jsdelivr.net/quicksettings/latest/quicksettings.min.js"></script>
+    <script src="lib/p5.gui.js"></script>
     <script src="js/sketch.js"></script>
   </head>
   <body>
