--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="lib/p5.dom.js"></script>
     <script src="https://cdn.jsdelivr.net/quicksettings/latest/quicksettings.min.js"></script>
     <script src="lib/p5.gui.js"></script>
+    <script src="js/lsystem.js"></script>
     <script src="js/sketch.js"></script>
   </head>
   <body>
